[package]
name = "snyk-config"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
description = "Opinionated JSON config loader"
readme = "README.md"
repository = "https://github.com/FauxFaux/snyk-config-rs"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
serde_json = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
tempfile = "3"
